--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,41 @@
-<h2>Sign up</h2>
+<div class="signup-form">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <h2>Sign up</h2>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <p class="hint-text">Sign up with your social media account or email address</p>
+    <div class="social-btn text-center">
+      <a href="#" class="btn btn-primary btn-lg"><i class="fa fa-facebook"></i> Facebook</a>
+      <a href="#" class="btn btn-info btn-lg"><i class="fa fa-twitter"></i> Twitter</a>
+      <a href="#" class="btn btn-danger btn-lg"><i class="fa fa-google"></i> Google</a>
+    </div>
+    <div class="or-seperator"><b>or</b></div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="form-group">
+      <%= f.email_field :first_name, autofocus: true, autocomplete: "email",class: 'form-control input-lg',placeholder: "First Name" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="form-group">
+      <%= f.email_field :last_name, autofocus: true, autocomplete: "email",class: 'form-control input-lg',placeholder: "Last Name" %>
+    </div>  
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="form-group">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email",class: 'form-control input-lg',placeholder: "Email" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="form-group">
+      <% if @minimum_password_length %>
+      <!-- <em>(<%= @minimum_password_length %> characters minimum)</em> -->
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password",class: 'form-control input-lg',placeholder: "Password" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password",class: 'form-control input-lg',placeholder: "Confirm Password" %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="form-group">
+      <button type="submit" class="btn btn-success btn-lg btn-block signup-btn">Sign Up</button>
+    </div>
+    <%= render "devise/shared/links" %>
+  <% end %>
+</div>
