--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import 'font-awesome.css';
+@import 'jquery-ui.min.css';
 
 body {
     background: #dfe7e9;
