--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,11 +11,11 @@
     <div class="or-seperator"><b>or</b></div>
 
     <div class="form-group">
-      <%= f.email_field :first_name, autofocus: true, autocomplete: "email",class: 'form-control input-lg',placeholder: "First Name" %>
+      <%= f.text_field :first_name, autofocus: true, autocomplete: "email",class: 'form-control input-lg',placeholder: "First Name" %>
     </div>
 
     <div class="form-group">
-      <%= f.email_field :last_name, autofocus: true, autocomplete: "email",class: 'form-control input-lg',placeholder: "Last Name" %>
+      <%= f.text_field :last_name, autofocus: true, autocomplete: "email",class: 'form-control input-lg',placeholder: "Last Name" %>
     </div>  
 
     <div class="form-group">
