--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 <h1>Transactions</h1>
 <div class="well">
   <%= link_to 'Add Transactions', new_transaction_path , remote: true, class: "btn btn-default" ,:id => "new_transaction" %>
@@ -7,13 +6,15 @@
 <table class="table table-bordered table-striped">
   <thead>
     <tr>
-      <th>Author Name</th>
-      <th>View</th>
+      <th>Transaction Name</th>
+      <th>Expense Type</th>
+      <th>Transaction Type</th>
+      <th>Date</th>
       <th>Edit</th>
       <th>Destroy</th>
     </tr>
   </thead>
-  <tbody class="author-index"> 
+  <tbody class="transaction-index"> 
    <%= render 'index' %>
   </tbody>
 </table>
